[MSA-79] fix: SonarQube issue 수정